--- a/Assets/Resources/Languages/4_JP.xml
+++ b/Assets/Resources/Languages/4_JP.xml
@@ -2,103 +2,105 @@
 <data>
     <i k="Key" v="JP"/>
     <i k="LanguageName" v="日本語"/>
-    <i k="UI.Yes" v="はい"/>
-    <i k="UI.No" v="いいえ"/>
-    <i k="UI.Confirm" v="確認"/>
-    <i k="UI.Cancel" v="キャンセル"/>
-    <i k="UI.On" v="オン"/>
-    <i k="UI.Off" v="オフ"/>
-    <i k="UI.Settings" v="設定"/>
-    <i k="UI.Settings.Movement.InvertX" v="X 軸反転"/>
-    <i k="UI.Settings.Movement.InvertY" v="Y 軸反転"/>
-    <i k="UI.Settings.Movement.Sensitivity" v="マウス感度"/>
-    <i k="UI.Settings.Language" v="言語"/>
-    <i k="UI.Settings.Visuals.Graphics" v="グラフィック"/>
-    <i k="UI.Settings.Visuals.Quality" v="画質"/>
-    <i k="UI.Settings.Visuals.Quality.Low" v="低"/>
-    <i k="UI.Settings.Visuals.Quality.Medium" v="中"/>
-    <i k="UI.Settings.Visuals.Quality.High" v="高"/>
-    <i k="UI.Settings.Visuals.Quality.Ultra" v="最高"/>
-    <i k="UI.Settings.Visuals.Subtitles" v="字幕"/>
-    <i k="UI.Settings.Visuals.FullscreenMode" v="フルスクリーン"/>
-    <i k="UI.Settings.Visuals.Resolution" v="解像度"/>
-    <i k="UI.Settings.Visuals.Brightness" v="明るさ"/>
-    <i k="UI.Settings.Audio.Volume" v="ボリューム"/>
-    <i k="UI.Settings.Controls" v="操作"/>
-    <i k="UI.Settings.Controls.Keyboard" v="キーボード"/>
-    <i k="UI.Settings.Controls.Gamepad" v="コントローラー"/>
-    <i k="UI.Settings.Controls.Controller" v="コントローラー"/>
-    <i k="UI.Settings.Controls.TiltUp" v="上に傾ける"/>
-    <i k="UI.Settings.Controls.TiltDown" v="下に傾ける"/>
-    <i k="UI.Settings.Controls.Vibration" v="振動"/>
-    <i k="UI.Settings.Controls.GamepadVibration" v="コントローラー振動"/>
-    <i k="UI.Settings.Controls.ControllerVibration" v="コントローラー振動"/>
-    <i k="UI.Settings.Controls.Binding.WaitingForInput" v="入力を待っています…"/>
-    <i k="UI.Settings.Controls.Binding.NewKeyPrefix" v="押されたキーはアクションにバインド："/>
-    <i k="UI.PressAnyKey" v="ボタンを押す"/>
-    <i k="UI.Continue" v="続く"/>
-    <i k="UI.Resume" v="戻る"/>
-    <i k="UI.QuitGame" v="終了"/>
-    <i k="UI.QuitGame.Question" v="終了しますか？"/>
-    <i k="UI.ReturnToMenu" v="メニューに戻る"/>
-    <i k="UI.PauseMenu" v="ポーズ"/>
-    <i k="UI.Loading" v="ロード中"/>
-    <i k="UI.Loading.WithDots" v="ロード中…"/>
-    <i k="UI.RevertToDefault" v="デフォルトに戻す"/>
-    <i k="UI.GameTitle" v="DRIFTED"/>
-    <i k="UI.Credits" v="クレジット"/>
+    <i k="Credits.Art" v="ゲームアート"/>
+    <i k="Credits.Art.2DArt" v="2Dアーティスト"/>
+    <i k="Credits.Art.3DArt" v="3Dアーティスト"/>
+    <i k="Credits.Art.Animation" v="アニメーター"/>
+    <i k="Credits.Art.CharacterArt" v="キャラクターアーティスト"/>
+    <i k="Credits.Art.ConceptArt" v="コンセプトアーティスト"/>
+    <i k="Credits.Art.EnvironmentArt" v="エンバイロメントアーティスト"/>
+    <i k="Credits.Art.LeadArt" v="リードアーティスト"/>
+    <i k="Credits.Art.PostEffects" v="ポストエフェクト"/>
+    <i k="Credits.Art.TechnicalArt" v="テクニカルアーティスト"/>
+    <i k="Credits.Audio" v="オーディオ"/>
+    <i k="Credits.Audio.AudioDirecting" v="オーディオディレクター"/>
+    <i k="Credits.Audio.AudioProgramming" v="オーディオプログラマー"/>
+    <i k="Credits.Audio.Composing" v="作曲"/>
+    <i k="Credits.Audio.Music" v="音楽"/>
+    <i k="Credits.Audio.SoundDesign" v="サウンドデザイナー"/>
+    <i k="Credits.CreatedBy" v="ゲームクリエイター"/>
+    <i k="Credits.Credits" v="クレジット"/>
+    <i k="Credits.DemoDisclaimer" v="このゲームは現在 DEMO 版です。"/>
+    <i k="Credits.DemoDisclaimer.Bug" v="ゲームはまだ開発中ですので、エラーが発生することがあります。"/>
+    <i k="Credits.Disclaimer" v="このゲームは現在 DEMO 版です。開発は2023年11月から始まりました。"/>
+    <i k="Credits.ExternalResources" v="外部資源"/>
+    <i k="Credits.ExternalResources.Audio" v="オーディオ"/>
+    <i k="Credits.ExternalResources.Fonts" v="フォント"/>
+    <i k="Credits.ExternalResources.Models" v="モデル"/>
+    <i k="Credits.ExternalResources.Music" v="音楽"/>
+    <i k="Credits.ExternalResources.SoundEffects" v="オーディオ"/>
+    <i k="Credits.ExternalResources.Textures" v="テクスチャ"/>
+    <i k="Credits.GameDesign" v="ゲームデザイナー"/>
+    <i k="Credits.HeadphoneSuggested" v="このゲームはヘッドホン推奨です。"/>
+    <i k="Credits.LevelDesign" v="レベルデザイナー"/>
+    <i k="Credits.Localizatioin.French" v="フランス語"/>
+    <i k="Credits.Localization" v="多言語対応"/>
+    <i k="Credits.Localization.English" v="英語"/>
+    <i k="Credits.Localization.German" v="ドイツ語"/>
+    <i k="Credits.Localization.Japanese" v="日本語"/>
+    <i k="Credits.Localization.Korean" v="韓国語"/>
+    <i k="Credits.Localization.ZH-CN" v="簡体字"/>
+    <i k="Credits.Localization.ZH-TW" v="繁体字"/>
+    <i k="Credits.ProducedBy" v="プロデューサー"/>
+    <i k="Credits.Programming" v="プログラミング"/>
+    <i k="Credits.Programming.LeadProgramming" v="リードプログラマー"/>
+    <i k="Credits.Script" v="スクリプト"/>
+    <i k="Credits.SpecialThanks" v="Special Thanks"/>
+    <i k="Credits.Story" v="ストーリー"/>
+    <i k="Credits.Testers" v="テスタ―"/>
+    <i k="Credits.Testers.ExternalTesters" v="エクスターナルテスター"/>
+    <i k="Credits.Testers.InternalTesters" v="内部テスター"/>
+    <i k="Credits.ThankYouForPlaying" v="本作品をプレイしていただきありがとうございます。"/>
+    <i k="Credits.ThankYouForPlaying.Demo" v="DEMO をプレイしていただきありがとうございます。"/>
+    <i k="Credits.Trailer" v="予告"/>
     <i k="QA.Questionnaire" v="アンケートを記入"/>
     <i k="QA.ReportBug" v="バグを報告"/>
     <i k="QA.WishlistOnSteam" v="Steam ウィッシュリスト"/>
-    <i k="Credits.Credits" v="クレジット"/>
-    <i k="Credits.CreatedBy" v="ゲームクリエイター"/>
-    <i k="Credits.ProducedBy" v="プロデューサー"/>
-    <i k="Credits.GameDesign" v="ゲームデザイナー"/>
-    <i k="Credits.Story" v="ストーリー"/>
-    <i k="Credits.Script" v="スクリプト"/>
-    <i k="Credits.Trailer" v="予告"/>
-    <i k="Credits.LevelDesign" v="レベルデザイナー"/>
-    <i k="Credits.Art" v="ゲームアート"/>
-    <i k="Credits.Art.LeadArt" v="リードアーティスト"/>
-    <i k="Credits.Art.ConceptArt" v="コンセプトアーティスト"/>
-    <i k="Credits.Art.2DArt" v="2Dアーティスト"/>
-    <i k="Credits.Art.3DArt" v="3Dアーティスト"/>
-    <i k="Credits.Art.EnvironmentArt" v="エンバイロメントアーティスト"/>
-    <i k="Credits.Art.CharacterArt" v="キャラクターアーティスト"/>
-    <i k="Credits.Art.Animation" v="アニメーター"/>
-    <i k="Credits.Art.PostEffects" v="ポストエフェクト"/>
-    <i k="Credits.Art.TechnicalArt" v="テクニカルアーティスト"/>
-    <i k="Credits.Programming" v="プログラミング"/>
-    <i k="Credits.Programming.LeadProgramming" v="リードプログラマー"/>
-    <i k="Credits.Audio" v="オーディオ"/>
-    <i k="Credits.Audio.AudioDirecting" v="オーディオディレクター"/>
-    <i k="Credits.Audio.SoundDesign" v="サウンドデザイナー"/>
-    <i k="Credits.Audio.AudioProgramming" v="オーディオプログラマー"/>
-    <i k="Credits.Audio.Music" v="音楽"/>
-    <i k="Credits.Audio.Composing" v="作曲"/>
-    <i k="Credits.Testers" v="テスタ―"/>
-    <i k="Credits.Testers.InternalTesters" v="内部テスター"/>
-    <i k="Credits.Testers.ExternalTesters" v="エクスターナルテスター"/>
-    <i k="Credits.ExternalResources" v="外部資源"/>
-    <i k="Credits.ExternalResources.Fonts" v="フォント"/>
-    <i k="Credits.ExternalResources.Textures" v="テクスチャ"/>
-    <i k="Credits.ExternalResources.Models" v="モデル"/>
-    <i k="Credits.ExternalResources.SoundEffects" v="オーディオ"/>
-    <i k="Credits.ExternalResources.Music" v="音楽"/>
-    <i k="Credits.ExternalResources.Audio" v="オーディオ"/>
-    <i k="Credits.Localization" v="多言語対応"/>
-    <i k="Credits.Localization.English" v="英語"/>
-    <i k="Credits.Localizatioin.French" v="フランス語"/>
-    <i k="Credits.Localization.German" v="ドイツ語"/>
-    <i k="Credits.Localization.Japanese" v="日本語"/>
-    <i k="Credits.Localization.ZH-TW" v="繁体字"/>
-    <i k="Credits.Localization.ZH-CN" v="簡体字"/>
-    <i k="Credits.Localization.Korean" v="韓国語"/>
-    <i k="Credits.SpecialThanks" v="Special Thanks"/>
-    <i k="Credits.Disclaimer" v="このゲームは現在 DEMO 版です。開発は2023年11月から始まりました。"/>
-    <i k="Credits.DemoDisclaimer" v="このゲームは現在 DEMO 版です。"/>
-    <i k="Credits.DemoDisclaimer.Bug" v="ゲームはまだ開発中ですので、エラーが発生することがあります。"/>
-    <i k="Credits.ThankYouForPlaying" v="本作品をプレイしていただきありがとうございます。"/>
-    <i k="Credits.ThankYouForPlaying.Demo" v="DEMO をプレイしていただきありがとうございます。"/>
-    <i k="Credits.HeadphoneSuggested" v="このゲームはヘッドホン推奨です。"/>
+    <i k="UI.Cancel" v="キャンセル"/>
+    <i k="UI.Confirm" v="確認"/>
+    <i k="UI.Continue" v="続く"/>
+    <i k="UI.Credits" v="クレジット"/>
+    <i k="UI.GameTitle" v="DRIFTED"/>
+    <i k="UI.Loading" v="ロード中"/>
+    <i k="UI.Loading.WithDots" v="ロード中…"/>
+    <i k="UI.No" v="いいえ"/>
+    <i k="UI.Off" v="オフ"/>
+    <i k="UI.On" v="オン"/>
+    <i k="UI.PauseMenu" v="ポーズ"/>
+    <i k="UI.PressAnyKey" v="ボタンを押す"/>
+    <i k="UI.QuitGame" v="終了"/>
+    <i k="UI.QuitGame.Question" v="終了しますか？"/>
+    <i k="UI.RestartFromBeginning" v="ゲームを最初から始める"/>
+    <i k="UI.RestartFromBeginning.Question" v="最初から始まりますか？"/>
+    <i k="UI.Resume" v="戻る"/>
+    <i k="UI.ReturnToMenu" v="メニューに戻る"/>
+    <i k="UI.RevertToDefault" v="デフォルトに戻す"/>
+    <i k="UI.Settings" v="設定"/>
+    <i k="UI.Settings.Audio.Volume" v="ボリューム"/>
+    <i k="UI.Settings.Controls" v="操作"/>
+    <i k="UI.Settings.Controls.Binding.NewKeyPrefix" v="押されたキーはアクションにバインド："/>
+    <i k="UI.Settings.Controls.Binding.WaitingForInput" v="入力を待っています…"/>
+    <i k="UI.Settings.Controls.Controller" v="コントローラー"/>
+    <i k="UI.Settings.Controls.ControllerVibration" v="コントローラー振動"/>
+    <i k="UI.Settings.Controls.Gamepad" v="コントローラー"/>
+    <i k="UI.Settings.Controls.GamepadVibration" v="コントローラー振動"/>
+    <i k="UI.Settings.Controls.Keyboard" v="キーボード"/>
+    <i k="UI.Settings.Controls.TiltDown" v="下に傾ける"/>
+    <i k="UI.Settings.Controls.TiltUp" v="上に傾ける"/>
+    <i k="UI.Settings.Controls.Vibration" v="振動"/>
+    <i k="UI.Settings.Language" v="言語"/>
+    <i k="UI.Settings.Movement.InvertX" v="X 軸反転"/>
+    <i k="UI.Settings.Movement.InvertY" v="Y 軸反転"/>
+    <i k="UI.Settings.Movement.Sensitivity" v="マウス感度"/>
+    <i k="UI.Settings.Visuals.Brightness" v="明るさ"/>
+    <i k="UI.Settings.Visuals.FullscreenMode" v="フルスクリーン"/>
+    <i k="UI.Settings.Visuals.Graphics" v="グラフィック"/>
+    <i k="UI.Settings.Visuals.Quality" v="画質"/>
+    <i k="UI.Settings.Visuals.Quality.High" v="高"/>
+    <i k="UI.Settings.Visuals.Quality.Low" v="低"/>
+    <i k="UI.Settings.Visuals.Quality.Medium" v="中"/>
+    <i k="UI.Settings.Visuals.Quality.Ultra" v="最高"/>
+    <i k="UI.Settings.Visuals.Resolution" v="解像度"/>
+    <i k="UI.Settings.Visuals.Subtitles" v="字幕"/>
+    <i k="UI.Yes" v="はい"/>
 </data>
