--- a/Assets/Resources/Languages/7_KO.xml
+++ b/Assets/Resources/Languages/7_KO.xml
@@ -2,103 +2,105 @@
 <data>
     <i k="Key" v="KO"/>
     <i k="LanguageName" v="한국어"/>
-    <i k="UI.Yes" v="예"/>
-    <i k="UI.No" v="아니요"/>
-    <i k="UI.Confirm" v="확인"/>
-    <i k="UI.Cancel" v="취소"/>
-    <i k="UI.On" v="켜기"/>
-    <i k="UI.Off" v="끄기"/>
-    <i k="UI.Settings" v="설정"/>
-    <i k="UI.Settings.Movement.InvertX" v="X 축 반전"/>
-    <i k="UI.Settings.Movement.InvertY" v="Y 축 반전"/>
-    <i k="UI.Settings.Movement.Sensitivity" v="감도"/>
-    <i k="UI.Settings.Language" v="언어"/>
-    <i k="UI.Settings.Visuals.Graphics" v="그래픽"/>
-    <i k="UI.Settings.Visuals.Quality" v="시각 품질"/>
-    <i k="UI.Settings.Visuals.Quality.Low" v="낮음"/>
-    <i k="UI.Settings.Visuals.Quality.Medium" v="중간"/>
-    <i k="UI.Settings.Visuals.Quality.High" v="높음"/>
-    <i k="UI.Settings.Visuals.Quality.Ultra" v="최고"/>
-    <i k="UI.Settings.Visuals.Subtitles" v="자막"/>
-    <i k="UI.Settings.Visuals.FullscreenMode" v="전체 화면 모드"/>
-    <i k="UI.Settings.Visuals.Resolution" v="해상도"/>
-    <i k="UI.Settings.Visuals.Brightness" v="밝기"/>
-    <i k="UI.Settings.Audio.Volume" v="볼륨"/>
-    <i k="UI.Settings.Controls" v="조작"/>
-    <i k="UI.Settings.Controls.Keyboard" v="키보드"/>
-    <i k="UI.Settings.Controls.Gamepad" v="게임패드"/>
-    <i k="UI.Settings.Controls.Controller" v="게임패드"/>
-    <i k="UI.Settings.Controls.TiltUp" v="위로 기울이기"/>
-    <i k="UI.Settings.Controls.TiltDown" v="아래로 기울이기"/>
-    <i k="UI.Settings.Controls.Vibration" v="진동"/>
-    <i k="UI.Settings.Controls.GamepadVibration" v="게임패드 진동"/>
-    <i k="UI.Settings.Controls.ControllerVibration" v="게임패드 진동"/>
-    <i k="UI.Settings.Controls.Binding.WaitingForInput" v="입력 대기 중..."/>
-    <i k="UI.Settings.Controls.Binding.NewKeyPrefix" v="동작에 대한 새로운 키 입력:"/>
-    <i k="UI.PressAnyKey" v="아무 키나 누르세요"/>
-    <i k="UI.Continue" v="계속하기"/>
-    <i k="UI.Resume" v="이어하기"/>
-    <i k="UI.QuitGame" v="게임 종료"/>
-    <i k="UI.QuitGame.Question" v="정말로 종료할까요?"/>
-    <i k="UI.ReturnToMenu" v="메인 메뉴로 돌아가기"/>
-    <i k="UI.PauseMenu" v="일시 정지 메뉴"/>
-    <i k="UI.Loading" v="불러오는 중..."/>
-    <i k="UI.Loading.WithDots" v="불러오는 중"/>
-    <i k="UI.RevertToDefault" v="기본값으로 되돌리기"/>
-    <i k="UI.GameTitle" v="DRIFTED"/>
-    <i k="UI.Credits" v="제작진"/>
+    <i k="Credits.Art" v="아티스트"/>
+    <i k="Credits.Art.2DArt" v="2D 아티스트"/>
+    <i k="Credits.Art.3DArt" v="3D 아티스트"/>
+    <i k="Credits.Art.Animation" v="애니메이터"/>
+    <i k="Credits.Art.CharacterArt" v="캐릭터 아티스트"/>
+    <i k="Credits.Art.ConceptArt" v="컨셉 아티스트"/>
+    <i k="Credits.Art.EnvironmentArt" v="배경 아티스트"/>
+    <i k="Credits.Art.LeadArt" v="리드 아티스트"/>
+    <i k="Credits.Art.PostEffects" v="특수 효과"/>
+    <i k="Credits.Art.TechnicalArt" v="테크니컬 아티스트"/>
+    <i k="Credits.Audio" v="음향"/>
+    <i k="Credits.Audio.AudioDirecting" v="음향 감독"/>
+    <i k="Credits.Audio.AudioProgramming" v="오디오 프로그래머"/>
+    <i k="Credits.Audio.Composing" v="작곡"/>
+    <i k="Credits.Audio.Music" v="음악"/>
+    <i k="Credits.Audio.SoundDesign" v="사운드 디자이너"/>
+    <i k="Credits.CreatedBy" v="게임 제작자"/>
+    <i k="Credits.Credits" v="제작진"/>
+    <i k="Credits.DemoDisclaimer" v="This game is currently a demo."/>
+    <i k="Credits.DemoDisclaimer.Bug" v="This is a work in progress, and it does not represent the quality of the final game."/>
+    <i k="Credits.Disclaimer" v="This game is currently a demo. Its development started from November 2023."/>
+    <i k="Credits.ExternalResources" v="외부 리소스"/>
+    <i k="Credits.ExternalResources.Audio" v="음향"/>
+    <i k="Credits.ExternalResources.Fonts" v="글꼴"/>
+    <i k="Credits.ExternalResources.Models" v="3D 모델"/>
+    <i k="Credits.ExternalResources.Music" v="음악"/>
+    <i k="Credits.ExternalResources.SoundEffects" v="사운드 디자이너"/>
+    <i k="Credits.ExternalResources.Textures" v="텍스처"/>
+    <i k="Credits.GameDesign" v="게임 디자인"/>
+    <i k="Credits.HeadphoneSuggested" v="Use headphones for the best experience."/>
+    <i k="Credits.LevelDesign" v="레벨 디자인"/>
+    <i k="Credits.Localizatioin.French" v="프랑스어"/>
+    <i k="Credits.Localization" v="현지화"/>
+    <i k="Credits.Localization.English" v="영어"/>
+    <i k="Credits.Localization.German" v="독일어"/>
+    <i k="Credits.Localization.Japanese" v="일본어"/>
+    <i k="Credits.Localization.Korean" v="한국어"/>
+    <i k="Credits.Localization.ZH-CN" v="중국어 (간체자)"/>
+    <i k="Credits.Localization.ZH-TW" v="중국어 (정체자)"/>
+    <i k="Credits.ProducedBy" v="프로듀서"/>
+    <i k="Credits.Programming" v="프로그래머"/>
+    <i k="Credits.Programming.LeadProgramming" v="리드 프로그래머"/>
+    <i k="Credits.Script" v="글 내용"/>
+    <i k="Credits.SpecialThanks" v="특별 감사"/>
+    <i k="Credits.Story" v="스토리"/>
+    <i k="Credits.Testers" v="테스터"/>
+    <i k="Credits.Testers.ExternalTesters" v="외부 테스터"/>
+    <i k="Credits.Testers.InternalTesters" v="내부 테스터"/>
+    <i k="Credits.ThankYouForPlaying" v="Thank you for playing."/>
+    <i k="Credits.ThankYouForPlaying.Demo" v="Thank you for playing the demo."/>
+    <i k="Credits.Trailer" v="예고편"/>
     <i k="QA.Questionnaire" v="설문지"/>
     <i k="QA.ReportBug" v="버그 신고하기"/>
     <i k="QA.WishlistOnSteam" v="Wishlist on Steam"/>
-    <i k="Credits.Credits" v="제작진"/>
-    <i k="Credits.CreatedBy" v="게임 제작자"/>
-    <i k="Credits.ProducedBy" v="프로듀서"/>
-    <i k="Credits.GameDesign" v="게임 디자인"/>
-    <i k="Credits.Story" v="스토리"/>
-    <i k="Credits.Script" v="글 내용"/>
-    <i k="Credits.Trailer" v="예고편"/>
-    <i k="Credits.LevelDesign" v="레벨 디자인"/>
-    <i k="Credits.Art" v="아티스트"/>
-    <i k="Credits.Art.LeadArt" v="리드 아티스트"/>
-    <i k="Credits.Art.ConceptArt" v="컨셉 아티스트"/>
-    <i k="Credits.Art.2DArt" v="2D 아티스트"/>
-    <i k="Credits.Art.3DArt" v="3D 아티스트"/>
-    <i k="Credits.Art.EnvironmentArt" v="배경 아티스트"/>
-    <i k="Credits.Art.CharacterArt" v="캐릭터 아티스트"/>
-    <i k="Credits.Art.Animation" v="애니메이터"/>
-    <i k="Credits.Art.PostEffects" v="특수 효과"/>
-    <i k="Credits.Art.TechnicalArt" v="테크니컬 아티스트"/>
-    <i k="Credits.Programming" v="프로그래머"/>
-    <i k="Credits.Programming.LeadProgramming" v="리드 프로그래머"/>
-    <i k="Credits.Audio" v="음향"/>
-    <i k="Credits.Audio.AudioDirecting" v="음향 감독"/>
-    <i k="Credits.Audio.SoundDesign" v="사운드 디자이너"/>
-    <i k="Credits.Audio.AudioProgramming" v="오디오 프로그래머"/>
-    <i k="Credits.Audio.Music" v="음악"/>
-    <i k="Credits.Audio.Composing" v="작곡"/>
-    <i k="Credits.Testers" v="테스터"/>
-    <i k="Credits.Testers.InternalTesters" v="내부 테스터"/>
-    <i k="Credits.Testers.ExternalTesters" v="외부 테스터"/>
-    <i k="Credits.ExternalResources" v="외부 리소스"/>
-    <i k="Credits.ExternalResources.Fonts" v="글꼴"/>
-    <i k="Credits.ExternalResources.Textures" v="텍스처"/>
-    <i k="Credits.ExternalResources.Models" v="3D 모델"/>
-    <i k="Credits.ExternalResources.SoundEffects" v="사운드 디자이너"/>
-    <i k="Credits.ExternalResources.Music" v="음악"/>
-    <i k="Credits.ExternalResources.Audio" v="음향"/>
-    <i k="Credits.Localization" v="현지화"/>
-    <i k="Credits.Localization.English" v="영어"/>
-    <i k="Credits.Localizatioin.French" v="프랑스어"/>
-    <i k="Credits.Localization.German" v="독일어"/>
-    <i k="Credits.Localization.Japanese" v="일본어"/>
-    <i k="Credits.Localization.ZH-TW" v="중국어 (정체자)"/>
-    <i k="Credits.Localization.ZH-CN" v="중국어 (간체자)"/>
-    <i k="Credits.Localization.Korean" v="한국어"/>
-    <i k="Credits.SpecialThanks" v="특별 감사"/>
-    <i k="Credits.Disclaimer" v="This game is currently a demo. Its development started from November 2023."/>
-    <i k="Credits.DemoDisclaimer" v="This game is currently a demo."/>
-    <i k="Credits.DemoDisclaimer.Bug" v="This is a work in progress, and it does not represent the quality of the final game."/>
-    <i k="Credits.ThankYouForPlaying" v="Thank you for playing."/>
-    <i k="Credits.ThankYouForPlaying.Demo" v="Thank you for playing the demo."/>
-    <i k="Credits.HeadphoneSuggested" v="Use headphones for the best experience."/>
+    <i k="UI.Cancel" v="취소"/>
+    <i k="UI.Confirm" v="확인"/>
+    <i k="UI.Continue" v="계속하기"/>
+    <i k="UI.Credits" v="제작진"/>
+    <i k="UI.GameTitle" v="DRIFTED"/>
+    <i k="UI.Loading" v="불러오는 중..."/>
+    <i k="UI.Loading.WithDots" v="불러오는 중"/>
+    <i k="UI.No" v="아니요"/>
+    <i k="UI.Off" v="끄기"/>
+    <i k="UI.On" v="켜기"/>
+    <i k="UI.PauseMenu" v="일시 정지 메뉴"/>
+    <i k="UI.PressAnyKey" v="아무 키나 누르세요"/>
+    <i k="UI.QuitGame" v="게임 종료"/>
+    <i k="UI.QuitGame.Question" v="정말로 종료할까요?"/>
+    <i k="UI.RestartFromBeginning" v="Restart Game from Beginning"/>
+    <i k="UI.RestartFromBeginning.Question" v="Are you sure you want to restart?"/>
+    <i k="UI.Resume" v="이어하기"/>
+    <i k="UI.ReturnToMenu" v="메인 메뉴로 돌아가기"/>
+    <i k="UI.RevertToDefault" v="기본값으로 되돌리기"/>
+    <i k="UI.Settings" v="설정"/>
+    <i k="UI.Settings.Audio.Volume" v="볼륨"/>
+    <i k="UI.Settings.Controls" v="조작"/>
+    <i k="UI.Settings.Controls.Binding.NewKeyPrefix" v="동작에 대한 새로운 키 입력:"/>
+    <i k="UI.Settings.Controls.Binding.WaitingForInput" v="입력 대기 중..."/>
+    <i k="UI.Settings.Controls.Controller" v="게임패드"/>
+    <i k="UI.Settings.Controls.ControllerVibration" v="게임패드 진동"/>
+    <i k="UI.Settings.Controls.Gamepad" v="게임패드"/>
+    <i k="UI.Settings.Controls.GamepadVibration" v="게임패드 진동"/>
+    <i k="UI.Settings.Controls.Keyboard" v="키보드"/>
+    <i k="UI.Settings.Controls.TiltDown" v="아래로 기울이기"/>
+    <i k="UI.Settings.Controls.TiltUp" v="위로 기울이기"/>
+    <i k="UI.Settings.Controls.Vibration" v="진동"/>
+    <i k="UI.Settings.Language" v="언어"/>
+    <i k="UI.Settings.Movement.InvertX" v="X 축 반전"/>
+    <i k="UI.Settings.Movement.InvertY" v="Y 축 반전"/>
+    <i k="UI.Settings.Movement.Sensitivity" v="감도"/>
+    <i k="UI.Settings.Visuals.Brightness" v="밝기"/>
+    <i k="UI.Settings.Visuals.FullscreenMode" v="전체 화면 모드"/>
+    <i k="UI.Settings.Visuals.Graphics" v="그래픽"/>
+    <i k="UI.Settings.Visuals.Quality" v="시각 품질"/>
+    <i k="UI.Settings.Visuals.Quality.High" v="높음"/>
+    <i k="UI.Settings.Visuals.Quality.Low" v="낮음"/>
+    <i k="UI.Settings.Visuals.Quality.Medium" v="중간"/>
+    <i k="UI.Settings.Visuals.Quality.Ultra" v="최고"/>
+    <i k="UI.Settings.Visuals.Resolution" v="해상도"/>
+    <i k="UI.Settings.Visuals.Subtitles" v="자막"/>
+    <i k="UI.Yes" v="예"/>
 </data>
