--- a/Assets/Resources/Languages/5_ZH-TW.xml
+++ b/Assets/Resources/Languages/5_ZH-TW.xml
@@ -2,103 +2,105 @@
 <data>
     <i k="Key" v="ZH-TW"/>
     <i k="LanguageName" v="繁體字"/>
-    <i k="UI.Yes" v="是"/>
-    <i k="UI.No" v="否"/>
-    <i k="UI.Confirm" v="確認"/>
-    <i k="UI.Cancel" v="取消"/>
-    <i k="UI.On" v="開啟"/>
-    <i k="UI.Off" v="關閉"/>
-    <i k="UI.Settings" v="設定"/>
-    <i k="UI.Settings.Movement.InvertX" v="反轉 X 軸"/>
-    <i k="UI.Settings.Movement.InvertY" v="反轉 Y 軸"/>
-    <i k="UI.Settings.Movement.Sensitivity" v="靈敏度"/>
-    <i k="UI.Settings.Language" v="語言"/>
-    <i k="UI.Settings.Visuals.Graphics" v="畫面"/>
-    <i k="UI.Settings.Visuals.Quality" v="畫質"/>
-    <i k="UI.Settings.Visuals.Quality.Low" v="低"/>
-    <i k="UI.Settings.Visuals.Quality.Medium" v="中"/>
-    <i k="UI.Settings.Visuals.Quality.High" v="高"/>
-    <i k="UI.Settings.Visuals.Quality.Ultra" v="極高"/>
-    <i k="UI.Settings.Visuals.Subtitles" v="字幕"/>
-    <i k="UI.Settings.Visuals.FullscreenMode" v="全螢幕模式"/>
-    <i k="UI.Settings.Visuals.Resolution" v="解析度"/>
-    <i k="UI.Settings.Visuals.Brightness" v="顯示亮度"/>
-    <i k="UI.Settings.Audio.Volume" v="音量"/>
-    <i k="UI.Settings.Controls" v="控制"/>
-    <i k="UI.Settings.Controls.Keyboard" v="鍵盤"/>
-    <i k="UI.Settings.Controls.Gamepad" v="控制器"/>
-    <i k="UI.Settings.Controls.Controller" v="控制器"/>
-    <i k="UI.Settings.Controls.TiltUp" v="向上"/>
-    <i k="UI.Settings.Controls.TiltDown" v="向下"/>
-    <i k="UI.Settings.Controls.Vibration" v="震動"/>
-    <i k="UI.Settings.Controls.GamepadVibration" v="控制器震動"/>
-    <i k="UI.Settings.Controls.ControllerVibration" v="控制器震動"/>
-    <i k="UI.Settings.Controls.Binding.WaitingForInput" v="正在等待輸入…"/>
-    <i k="UI.Settings.Controls.Binding.NewKeyPrefix" v="按下的按鍵將綁定："/>
-    <i k="UI.PressAnyKey" v="按任何鍵"/>
-    <i k="UI.Continue" v="繼續"/>
-    <i k="UI.Resume" v="繼續"/>
-    <i k="UI.QuitGame" v="離開遊戲"/>
-    <i k="UI.QuitGame.Question" v="是否確認離開遊戲？"/>
-    <i k="UI.ReturnToMenu" v="返回主畫面"/>
-    <i k="UI.PauseMenu" v="暫停選單"/>
-    <i k="UI.Loading" v="讀取中"/>
-    <i k="UI.Loading.WithDots" v="讀取中…"/>
-    <i k="UI.RevertToDefault" v="恢復為預設值"/>
-    <i k="UI.GameTitle" v="DRIFTED"/>
-    <i k="UI.Credits" v="開發人員"/>
+    <i k="Credits.Art" v="美術"/>
+    <i k="Credits.Art.2DArt" v="2D 美術"/>
+    <i k="Credits.Art.3DArt" v="3D 美術"/>
+    <i k="Credits.Art.Animation" v="動畫"/>
+    <i k="Credits.Art.CharacterArt" v="角色美術"/>
+    <i k="Credits.Art.ConceptArt" v="概念美術"/>
+    <i k="Credits.Art.EnvironmentArt" v="環境美術"/>
+    <i k="Credits.Art.LeadArt" v="主美術"/>
+    <i k="Credits.Art.PostEffects" v="特效"/>
+    <i k="Credits.Art.TechnicalArt" v="技術美術"/>
+    <i k="Credits.Audio" v="聲音"/>
+    <i k="Credits.Audio.AudioDirecting" v="音效總監"/>
+    <i k="Credits.Audio.AudioProgramming" v="音效程式"/>
+    <i k="Credits.Audio.Composing" v="作曲"/>
+    <i k="Credits.Audio.Music" v="音樂"/>
+    <i k="Credits.Audio.SoundDesign" v="音效設計"/>
+    <i k="Credits.CreatedBy" v="遊戲製作"/>
+    <i k="Credits.Credits" v="開發人員"/>
+    <i k="Credits.DemoDisclaimer" v="本遊戲目前為 DEMO 版本。"/>
+    <i k="Credits.DemoDisclaimer.Bug" v="遊戲尚在開發中，如遊玩過程出現錯誤請見諒。"/>
+    <i k="Credits.Disclaimer" v="本遊戲目前為 DEMO 版本。本作品於 2023 年 11 月開始開發。"/>
+    <i k="Credits.ExternalResources" v="外部資源"/>
+    <i k="Credits.ExternalResources.Audio" v="聲音"/>
+    <i k="Credits.ExternalResources.Fonts" v="字體"/>
+    <i k="Credits.ExternalResources.Models" v="模型"/>
+    <i k="Credits.ExternalResources.Music" v="音樂"/>
+    <i k="Credits.ExternalResources.SoundEffects" v="音效"/>
+    <i k="Credits.ExternalResources.Textures" v="材質"/>
+    <i k="Credits.GameDesign" v="遊戲設計"/>
+    <i k="Credits.HeadphoneSuggested" v="推薦使用耳機以達到最佳體驗。"/>
+    <i k="Credits.LevelDesign" v="關卡設計"/>
+    <i k="Credits.Localizatioin.French" v="法文"/>
+    <i k="Credits.Localization" v="翻譯"/>
+    <i k="Credits.Localization.English" v="英文"/>
+    <i k="Credits.Localization.German" v="德文"/>
+    <i k="Credits.Localization.Japanese" v="日文"/>
+    <i k="Credits.Localization.Korean" v="韓文"/>
+    <i k="Credits.Localization.ZH-CN" v="簡體字"/>
+    <i k="Credits.Localization.ZH-TW" v="繁體字"/>
+    <i k="Credits.ProducedBy" v="製作人"/>
+    <i k="Credits.Programming" v="程式"/>
+    <i k="Credits.Programming.LeadProgramming" v="主程式"/>
+    <i k="Credits.Script" v="劇本"/>
+    <i k="Credits.SpecialThanks" v="特別感謝"/>
+    <i k="Credits.Story" v="故事"/>
+    <i k="Credits.Testers" v="測試"/>
+    <i k="Credits.Testers.ExternalTesters" v="白紙測試"/>
+    <i k="Credits.Testers.InternalTesters" v="內部測試"/>
+    <i k="Credits.ThankYouForPlaying" v="感謝您的遊玩。"/>
+    <i k="Credits.ThankYouForPlaying.Demo" v="感謝您遊玩本 DEMO 作品。"/>
+    <i k="Credits.Trailer" v="預告"/>
     <i k="QA.Questionnaire" v="填寫問卷"/>
     <i k="QA.ReportBug" v="回報問題"/>
     <i k="QA.WishlistOnSteam" v="在 Steam 加入願望清單"/>
-    <i k="Credits.Credits" v="開發人員"/>
-    <i k="Credits.CreatedBy" v="遊戲製作"/>
-    <i k="Credits.ProducedBy" v="製作人"/>
-    <i k="Credits.GameDesign" v="遊戲設計"/>
-    <i k="Credits.Story" v="故事"/>
-    <i k="Credits.Script" v="劇本"/>
-    <i k="Credits.Trailer" v="預告"/>
-    <i k="Credits.LevelDesign" v="關卡設計"/>
-    <i k="Credits.Art" v="美術"/>
-    <i k="Credits.Art.LeadArt" v="主美術"/>
-    <i k="Credits.Art.ConceptArt" v="概念美術"/>
-    <i k="Credits.Art.2DArt" v="2D 美術"/>
-    <i k="Credits.Art.3DArt" v="3D 美術"/>
-    <i k="Credits.Art.EnvironmentArt" v="環境美術"/>
-    <i k="Credits.Art.CharacterArt" v="角色美術"/>
-    <i k="Credits.Art.Animation" v="動畫"/>
-    <i k="Credits.Art.PostEffects" v="特效"/>
-    <i k="Credits.Art.TechnicalArt" v="技術美術"/>
-    <i k="Credits.Programming" v="程式"/>
-    <i k="Credits.Programming.LeadProgramming" v="主程式"/>
-    <i k="Credits.Audio" v="聲音"/>
-    <i k="Credits.Audio.AudioDirecting" v="音效總監"/>
-    <i k="Credits.Audio.SoundDesign" v="音效設計"/>
-    <i k="Credits.Audio.AudioProgramming" v="音效程式"/>
-    <i k="Credits.Audio.Music" v="音樂"/>
-    <i k="Credits.Audio.Composing" v="作曲"/>
-    <i k="Credits.Testers" v="測試"/>
-    <i k="Credits.Testers.InternalTesters" v="內部測試"/>
-    <i k="Credits.Testers.ExternalTesters" v="白紙測試"/>
-    <i k="Credits.ExternalResources" v="外部資源"/>
-    <i k="Credits.ExternalResources.Fonts" v="字體"/>
-    <i k="Credits.ExternalResources.Textures" v="材質"/>
-    <i k="Credits.ExternalResources.Models" v="模型"/>
-    <i k="Credits.ExternalResources.SoundEffects" v="音效"/>
-    <i k="Credits.ExternalResources.Music" v="音樂"/>
-    <i k="Credits.ExternalResources.Audio" v="聲音"/>
-    <i k="Credits.Localization" v="翻譯"/>
-    <i k="Credits.Localization.English" v="英文"/>
-    <i k="Credits.Localizatioin.French" v="法文"/>
-    <i k="Credits.Localization.German" v="德文"/>
-    <i k="Credits.Localization.Japanese" v="日文"/>
-    <i k="Credits.Localization.ZH-TW" v="繁體字"/>
-    <i k="Credits.Localization.ZH-CN" v="簡體字"/>
-    <i k="Credits.Localization.Korean" v="韓文"/>
-    <i k="Credits.SpecialThanks" v="特別感謝"/>
-    <i k="Credits.Disclaimer" v="本遊戲目前為 DEMO 版本。本作品於 2023 年 11 月開始開發。"/>
-    <i k="Credits.DemoDisclaimer" v="本遊戲目前為 DEMO 版本。"/>
-    <i k="Credits.DemoDisclaimer.Bug" v="遊戲尚在開發中，如遊玩過程出現錯誤請見諒。"/>
-    <i k="Credits.ThankYouForPlaying" v="感謝您的遊玩。"/>
-    <i k="Credits.ThankYouForPlaying.Demo" v="感謝您遊玩本 DEMO 作品。"/>
-    <i k="Credits.HeadphoneSuggested" v="推薦使用耳機以達到最佳體驗。"/>
+    <i k="UI.Cancel" v="取消"/>
+    <i k="UI.Confirm" v="確認"/>
+    <i k="UI.Continue" v="繼續"/>
+    <i k="UI.Credits" v="開發人員"/>
+    <i k="UI.GameTitle" v="DRIFTED"/>
+    <i k="UI.Loading" v="讀取中"/>
+    <i k="UI.Loading.WithDots" v="讀取中…"/>
+    <i k="UI.No" v="否"/>
+    <i k="UI.Off" v="關閉"/>
+    <i k="UI.On" v="開啟"/>
+    <i k="UI.PauseMenu" v="暫停選單"/>
+    <i k="UI.PressAnyKey" v="按任何鍵"/>
+    <i k="UI.QuitGame" v="離開遊戲"/>
+    <i k="UI.QuitGame.Question" v="是否確認離開遊戲？"/>
+    <i k="UI.RestartFromBeginning" v="從頭開始遊戲"/>
+    <i k="UI.RestartFromBeginning.Question" v="是否確認從頭開始遊戲？"/>
+    <i k="UI.Resume" v="繼續"/>
+    <i k="UI.ReturnToMenu" v="返回主畫面"/>
+    <i k="UI.RevertToDefault" v="恢復為預設值"/>
+    <i k="UI.Settings" v="設定"/>
+    <i k="UI.Settings.Audio.Volume" v="音量"/>
+    <i k="UI.Settings.Controls" v="控制"/>
+    <i k="UI.Settings.Controls.Binding.NewKeyPrefix" v="按下的按鍵將綁定："/>
+    <i k="UI.Settings.Controls.Binding.WaitingForInput" v="正在等待輸入…"/>
+    <i k="UI.Settings.Controls.Controller" v="控制器"/>
+    <i k="UI.Settings.Controls.ControllerVibration" v="控制器震動"/>
+    <i k="UI.Settings.Controls.Gamepad" v="控制器"/>
+    <i k="UI.Settings.Controls.GamepadVibration" v="控制器震動"/>
+    <i k="UI.Settings.Controls.Keyboard" v="鍵盤"/>
+    <i k="UI.Settings.Controls.TiltDown" v="向下"/>
+    <i k="UI.Settings.Controls.TiltUp" v="向上"/>
+    <i k="UI.Settings.Controls.Vibration" v="震動"/>
+    <i k="UI.Settings.Language" v="語言"/>
+    <i k="UI.Settings.Movement.InvertX" v="反轉 X 軸"/>
+    <i k="UI.Settings.Movement.InvertY" v="反轉 Y 軸"/>
+    <i k="UI.Settings.Movement.Sensitivity" v="靈敏度"/>
+    <i k="UI.Settings.Visuals.Brightness" v="顯示亮度"/>
+    <i k="UI.Settings.Visuals.FullscreenMode" v="全螢幕模式"/>
+    <i k="UI.Settings.Visuals.Graphics" v="畫面"/>
+    <i k="UI.Settings.Visuals.Quality" v="畫質"/>
+    <i k="UI.Settings.Visuals.Quality.High" v="高"/>
+    <i k="UI.Settings.Visuals.Quality.Low" v="低"/>
+    <i k="UI.Settings.Visuals.Quality.Medium" v="中"/>
+    <i k="UI.Settings.Visuals.Quality.Ultra" v="極高"/>
+    <i k="UI.Settings.Visuals.Resolution" v="解析度"/>
+    <i k="UI.Settings.Visuals.Subtitles" v="字幕"/>
+    <i k="UI.Yes" v="是"/>
 </data>
